--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
         <div class="mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15926.531666528112!2d-40.3723695!3d-3.670755!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7eac7af58c539b7%3A0xbcd3cdc543b5ea8e!2sAuto%20Escola%20Atitude%20-%20Sobral%20Conquiste%20sua%20habilita%C3%A7%C3%A3o%20conosco!5e0!3m2!1spt-BR!2sbr!4v1698954022912!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+        <div class="horarioFuncionamento">
+            <!-- <h3>Horário de funcionamento</h3>
+                
+            <p>Segunda a Sexta de 07:00 às 11:20</p> -->
+            <marquee direction="">Horário de Funcionamento &nbsp; | &nbsp; Segunda a Sexta de 07:10 às 11:20 e aos Sábados de 07:10 às 11:20</marquee>
+        </div>
     </footer>
 </body>
 </html>
